objects/Answer__c/fields/Read_More__c.field-meta.xml
<CustomField>
    <fullName>Read_More__c</fullName>
    <label>Read More</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>True</fullName>
            </value>
            <value>
                <fullName>False</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>