objects/Answer__c/fields/Read_More_Time__c.field-meta.xml
<CustomField>
    <fullName>Read_More_Time__c</fullName>
    <label>Read More Time</label>
    <precision>8</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>