objects/Answer__c/fields/Time__c.field-meta.xml
<CustomField>
    <fullName>Time__c</fullName>
    <label>Time</label>
    <precision>8</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>